--- a/README.org
+++ b/README.org
@@ -10,3 +10,8 @@
 *** Red Black Tree
 [[./images/rbt.png]]
 
+** Known Issues
+1. If the Red Black Tree is not rendered with a default tree, the
+   layout hides the label of the root node. So, we always start the
+   visualization with some defaults
+
